# cargo-run-script

./: Cargo.toml  README.md
src/: arg_parse.rs  main.rs
test-files/: package-cargo.toml  workspace-cargo.toml
