[package]
name = "cargo-run-script"
version = "0.2.0"
authors = ["Josh Mcguigan"]
edition = "2018"
description = "Bringing `npm run-script` to Rust"
repository = "https://github.com/JoshMcguigan/cargo-run-script"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"

[package.metadata.scripts]
hello = "echo Hello"
goodbye = "echo Goodbye"
install = "cargo install --path . --force"
test = "echo $0 $1"